--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1960,7 +1960,7 @@ input, select, textarea {
 		-ms-appearance: none;
 		appearance: none;
 		background: rgba(212, 212, 255, 0.035);
-		border: none;
+		border: 1px solid #FFF;
 		border-radius: 0;
 		color: inherit;
 		display: block;
@@ -3766,7 +3766,7 @@ input, select, textarea {
 
 		#footer .copyright li {
 			border-left: solid 1px rgba(212, 212, 255, 0.1);
-			color: rgba(244, 244, 255, 0.2);
+			color: rgba(244, 244, 255, 0.9);
 			display: inline-block;
 			line-height: 1;
 			margin-left: 1em;
