--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4017,6 +4017,7 @@ input, select, textarea {
 		background-color: rgba(0,0,0,0.96); 
 		z-index: 1000; 
 		cursor: pointer; 
+		overflow:auto;
 	  }
 	  #overlay form {
 		  padding:50px;
