--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1848,18 +1848,20 @@ input, select, textarea {
 		z-index: 10000;
 		background:black;
 	}
+	#bottom-menu .row {
+		margin-left:0;
+	}
 	#bottom-menu .row > * {
 		padding:0;
 	}
-	#bottom-menu .col-3 {
+	#bottom-menu .col-4 {
 		text-align:center;
 	}
-	#bottom-menu .col-3 a {
+	#bottom-menu .col-4 a {
 		display:block;
-		padding-top:30px;
-		padding-bottom:30px;
+		padding:30px;
 	}
-	#bottom-menu .col-3 a:hover {
+	#bottom-menu .col-4 a:hover {
 		color:black;
 		background:blue;
 	}
